# devsecops-secure-ci-fastapi

./: .bandit  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-checks.yml
app/: config.py  main.py  models.py  store.py
app/routes/: lab.py  notes.py
tests/: conftest.py  test_health.py  test_lab_disabled.py  test_notes.py
