[project]
name = "devsecops-secure-ci-fastapi"
version = "0.1.0"
description = "FastAPI Notes API with intentional security vulnerabilities for DevSecOps training"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "N",    # pep8-naming
    "D",    # pydocstyle
    "ANN",  # flake8-annotations
    "ASYNC", # flake8-async
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "D100",    # missing docstring in public module
    "D101",    # missing docstring in public class
    "D102",    # missing docstring in public method
    "D103",    # missing docstring in public function
    "D104",    # missing docstring in public package
    "D106",    # missing docstring in public nested class
    "D107",    # missing docstring in __init__
    "D212",    # multi-line docstring summary should start at first line
    "D400",    # first line should end with period
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "S101",    # use of assert (needed for tests)
    "S104",    # possible binding to all interfaces (needed for uvicorn)
    "S106",    # possible hardcoded password (intentional for demo)
    "S307",    # intentional eval usage (for vulnerability demo)
    "PLR0913", # too many arguments
    "ERA001",  # found commented-out code (we have intentional FIX examples)
    "COM812",  # trailing comma missing (conflicts with formatter)
    "DTZ003",  # datetime.utcnow() usage (acceptable for this demo)
    "ARG001",  # unused function argument (FastAPI lifespan pattern)
    "A002",    # argument shadowing builtin (intentional for 'next' param)
    "UP007",   # use X | Y for type annotations (Python 3.9 compat)
    "PT004",   # fixture naming (autouse fixtures don't need underscore)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "D", "PLR2004"]
"app/routes/lab.py" = ["S307", "S608", "S602"]  # Allow intentional vulnerabilities

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
